places-links: Add the placeholer text for PostScript files

Since we hide the "Contents" tab instead of showing a blank table,
this is a minor issue in master. However, it is still relevant for
older branches.

https://bugzilla.gnome.org/show_bug.cgi?id=741780